<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.rahmony.igrades.NewCourseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_grade_name"
        android:id="@+id/new_grade_courseTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="65dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_grade_spinner_gradeTitle"
        android:layout_below="@+id/new_grade_courseTitle"
        android:layout_alignParentStart="true"
        android:entries="@array/gradesType"
        android:prompt="@string/new_grade_select_grade_title"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_grade_earned_grade"
        android:id="@+id/new_grade_text_earned_grade"
        android:layout_below="@+id/new_grade_spinner_gradeTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_grade_et_earned_grade"
        android:layout_below="@+id/new_grade_text_earned_grade"
        android:hint="@string/new_grade_earned_grade_hint"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_grade_total_grade"
        android:id="@+id/new_grade_text_total_grade"
        android:layout_below="@+id/new_grade_et_earned_grade"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/new_grade_et_total_grade"
        android:layout_below="@+id/new_grade_text_total_grade"
        android:hint="@string/new_grade_total_grade_hint"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />
</RelativeLayout>
